DXP-2662 Implement publish stream command (#12)