@@ -18,6 +18,8 @@
     <surefire-plugin.version>3.2.5</surefire-plugin.version>
     <compiler-plugin.version>3.13.0</compiler-plugin.version>
     <checkstyle-plugin.version>3.6.0</checkstyle-plugin.version>
+    <streamx.version>2.0.24</streamx.version>
+    <cloudevents.version>4.0.1</cloudevents.version>
   </properties>
 
   <dependencyManagement>
@@ -72,16 +74,20 @@
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging-annotations</artifactId>
-      <version>3.0.4.Final</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging-processor</artifactId>
-      <version>3.0.4.Final</version>
       <scope>provided</scope>
       <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <version>2.0.17</version>
     </dependency>
 
     <dependency>
@@ -120,29 +126,32 @@
     </dependency>
 
     <dependency>
-      <groupId>io.cloudevents</groupId>
-      <artifactId>cloudevents-core</artifactId>
-      <version>4.0.1</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>io.cloudevents</groupId>
-      <artifactId>cloudevents-json-jackson</artifactId>
-      <version>4.0.1</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
       <groupId>com.streamx</groupId>
       <artifactId>streamx-runner</artifactId>
-      <version>2.0.10</version>
+      <version>${streamx.version}</version>
     </dependency>
 
     <dependency>
       <groupId>com.streamx</groupId>
       <artifactId>mesh-model</artifactId>
-      <version>2.0.10</version>
+      <version>${streamx.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.streamx</groupId>
+      <artifactId>ingestion-client</artifactId>
+      <version>${streamx.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.cloudevents</groupId>
+      <artifactId>cloudevents-core</artifactId>
+      <version>${cloudevents.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.cloudevents</groupId>
+      <artifactId>cloudevents-json-jackson</artifactId>
+      <version>${cloudevents.version}</version>
     </dependency>
 
     <dependency>
@@ -197,6 +206,20 @@
     <dependency>
       <groupId>org.awaitility</groupId>
       <artifactId>awaitility</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>net.datafaker</groupId>
+      <artifactId>datafaker</artifactId>
+      <version>2.5.4</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.pulsar</groupId>
+      <artifactId>pulsar-client-admin</artifactId>
+      <version>4.1.3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -257,6 +280,13 @@
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.platform.version}</version>
         <extensions>true</extensions>
+        <configuration>
+          <!-- Otherwise we get runtime errors like:
+            java.lang.IllegalAccessError: module java.base does not open java.lang to unnamed module @xxx;
+            to use the thread-local-reset capability on Java 24 or later.
+          -->
+          <jvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArgs>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -300,12 +330,23 @@
         <version>${compiler-plugin.version}</version>
         <configuration>
           <parameters>true</parameters>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.jboss.logging</groupId>
+              <artifactId>jboss-logging-processor</artifactId>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <configuration>
+          <!-- Otherwise we get runtime errors like:
+            java.lang.IllegalAccessError: module java.base does not open java.lang to unnamed module @xxx;
+            to use the thread-local-reset capability on Java 24 or later.
+          -->
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
           </systemPropertyVariables>
@@ -350,6 +391,18 @@
         <skipITs>false</skipITs>
         <quarkus.package.type>native</quarkus.package.type>
       </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <systemPropertyVariables>
+                <native.image>true</native.image>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
